--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@ant-design/icons": "^4.2.2",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
@@ -14,7 +15,9 @@
 		"react-bootstrap": "^1.3.0",
 		"react-confirm": "^0.1.20",
 		"react-dom": "^16.13.1",
+		"react-modal": "^3.11.2",
 		"react-redux": "^7.2.1",
+		"react-responsive-carousel": "^3.2.10",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "^4.0.0",
 		"redux": "^4.0.5",
